Javascript para frames que aparecem ao clicar em todos frames da pagina SISTEMA

--- a/sistema.html
+++ b/sistema.html
@@ -119,29 +119,51 @@
         <h1>Patentes</h1>
         <h2>Para os Blocos:</h2>
         <p>Brasil: Pedido de patente de invenção de Produto, Processo de Montagem e Processo de Fabricação, com registro no INPI sobre número BR-10-2021-011034-1, com opinião preliminar sobre a patenteabilidade positiva;</p>
+
+
         <h3>Pedido de Patente no Brasil</h3>
         <p><a href="pdf/patente/Pedido de Patente Brasil.pdf" target="_blank">ver PDF em outra guia</a></p>
         <p><a id="arq001link" onclick="clickArq001()">ver PDF na mesma página</a></p>
         <div id="arq001frame" class="arquivopdf">
             <iframe src="pdf/patente/Pedido de Patente Brasil.pdf" frameborder="0" name="frame" scolling="yes">Seu navegador não é compativel.</iframe>
         </div>
-        <h3>Opinião Preliminar no Brasil <a href="pdf/patente/Opiniao Preliminar Brasil.pdf" target="_blank">ver PDF</a></h3>
-        <div class="arquivopdf">
+
+
+        <h3>Opinião Preliminar no Brasil</h3>
+        <p><a href="pdf/patente/Opiniao Preliminar Brasil.pdf" target="_blank">ver PDF em outra guia</a></a></p>
+        <p><a id="arq002link" onclick="clickArq002()">ver PDF na mesma página</a></p>
+        <div id="arq002frame" class="arquivopdf">
             <iframe src="pdf/patente/Opiniao Preliminar Brasil.pdf" frameborder="0" name="frame" scolling="yes">Seu navegador não é compativel.</iframe>
         </div>
+
+
         <p>Internacional: Pedido de patente de invenção de Produto, Processo de Montagem e Processo de Fabricação, com registro internacional no WIPO/PCT sobre número WO-2022-099395-A1, com opinião preliminar sobre a patenteabilidade positiva.</p>
-        <h3>Pedido de Patente Internacional <a href="pdf/patente/Pedido de Patente Internacional.pdf" target="_blank">ver PDF</a></h3>
-        <div class="arquivopdf">
+
+
+        <h3>Pedido de Patente Internacional</h3>
+        <p><a href="pdf/patente/Pedido de Patente Internacional.pdf" target="_blank">ver PDF em outra guia</a></p>
+        <p><a id="arq003link" onclick="clickArq003()">ver PDF na mesma página</a></p>
+        <div id="arq003frame" class="arquivopdf">
             <iframe src="pdf/patente/Pedido de Patente Internacional.pdf" frameborder="0" name="frame" scolling="yes">Seu navegador não é compativel.</iframe>
         </div>
-        <h3>Opinião Preliminar Internacional <a href="pdf/patente/Opiniao Preliminar Internacional.pdf" target="_blank">ver PDF</a></h3>
-        <div class="arquivopdf">
+
+
+        <h3>Opinião Preliminar Internacional</h3>
+        <p><a href="pdf/patente/Opiniao Preliminar Internacional.pdf" target="_blank">ver PDF em outra guia</a></p>
+        <p><a id="arq004link" onclick="clickArq004()">ver PDF na mesma página</a></p>
+        <div id="arq004frame" class="arquivopdf">
             <iframe src="pdf/patente/Opiniao Preliminar Internacional.pdf" frameborder="0" name="frame" scolling="yes">Seu navegador não é compativel.</iframe>
         </div>
+
+
         <h2>Para as Esquadrias:</h2>
         <p>Brasil: Pedido de patente de invenção de Produto e de Processo de Montagem, com registro no INPI sobre número BR 10 2024 023671-8, ainda sem pedido de opinião preliminar sobre a patenteabilidade;</p>
-        <h3>Pedido de Patente dos Frames <a href="pdf/patente/Pedido de Patente Frame.pdf" target="_blank">ver PDF</a></h3>
-        <div class="arquivopdf">
+
+
+        <h3>Pedido de Patente dos Frames</h3>
+        <p><a href="pdf/patente/Pedido de Patente Frame.pdf" target="_blank">ver PDF em outra guia</a></p>
+        <p><a id="arq005link" onclick="clickArq005()">ver PDF na mesma página</a></p>
+        <div id="arq005frame" class="arquivopdf">
             <iframe src="pdf/patente/Pedido de Patente Frame.pdf" frameborder="0" name="frame" scolling="yes">Seu navegador não é compativel.</iframe>
         </div>
     </main>
@@ -168,12 +190,45 @@
             }
         }
 
+
         function clickArq001(){
             if(arq001frame.style.display=='block'){
                 arq001frame.style.display='none'
             }
             else{
                 arq001frame.style.display='block'
+            }
+        }
+        function clickArq002(){
+            if(arq002frame.style.display=='block'){
+                arq002frame.style.display='none'
+            }
+            else{
+                arq002frame.style.display='block'
+            }
+        }
+        function clickArq003(){
+            if(arq003frame.style.display=='block'){
+                arq003frame.style.display='none'
+            }
+            else{
+                arq003frame.style.display='block'
+            }
+        }
+        function clickArq004(){
+            if(arq004frame.style.display=='block'){
+                arq004frame.style.display='none'
+            }
+            else{
+                arq004frame.style.display='block'
+            }
+        }
+        function clickArq005(){
+            if(arq005frame.style.display=='block'){
+                arq005frame.style.display='none'
+            }
+            else{
+                arq005frame.style.display='block'
             }
         }
     </script>
