Concerto do menu responsivo

--- a/home.html
+++ b/home.html
@@ -39,7 +39,7 @@
 
     <script>
         function clickMenu(){
-            if(burger.style.display=='block'){
+            if(itens.style.display=='block'){
                 itens.style.display='none'
                 burger.style.backgroundColor='white'
                 burger.style.color='darkred'
