--- a/produtos.html
+++ b/produtos.html
@@ -43,7 +43,7 @@
 
     <script>
         function clickMenu(){
-            if(burger.style.display=='block'){
+            if(itens.style.display=='block'){
                 itens.style.display='none'
                 burger.style.backgroundColor='white'
                 burger.style.color='darkred'
