--- a/sobre.html
+++ b/sobre.html
@@ -35,7 +35,7 @@
 
     <script>
         function clickMenu(){
-            if(burger.style.display=='block'){
+            if(itens.style.display=='block'){
                 itens.style.display='none'
                 burger.style.backgroundColor='white'
                 burger.style.color='darkred'
