Atualizando menu responsivo

--- a/sistema.html
+++ b/sistema.html
@@ -11,10 +11,12 @@
 </head>
 <body onresize="mudouTamanho()">
     <header>
-        <div class="image2"><img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo"></div>
-        <span id="burger" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
+        <menu>
+            <img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo">
+            <span id="burger" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
+        </menu>
         <nav id="itens">
-            <a href="#" class="image"><img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo"></a>
+            <img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo">
             <a href="home.html">Home</a>
             <a href="sistema.html" class="atual">MEGG wOrmhOle System</a>
             <a href="sobre.html">Sobre Nós</a>
