--- a/home.html
+++ b/home.html
@@ -19,10 +19,12 @@
 </head>
 <body onresize="mudouTamanho()">
     <header>
-        <div class="image2"><img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo"></div>
-        <span id="burger" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
+        <menu>
+            <img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo">
+            <span id="burger" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
+        </menu>
         <nav id="itens">
-            <a href="#" class="image"><img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo"></a>
+            <img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo">
             <a href="home.html" class="atual">Home</a>
             <a href="sistema.html">MEGG wOrmhOle System</a>
             <a href="sobre.html">Sobre Nós</a>
