--- a/pdf/index.html
+++ b/pdf/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../estilo/style.css">
     <style>
-        body{
+        *{
             background-color: white;
+        }
+        h1{
+            color: darkred;
+            text-align: center;
+            padding: 10px;
+            font-variant: small-caps;
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         }
     </style>
 </head>
