nova configuração de menu

--- a/produtos.html
+++ b/produtos.html
@@ -17,12 +17,14 @@
         </menu>
         <nav id="itens">
             <img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo">
-            <a href="home.html">Home</a>
-            <a href="sistema.html">MEGG wOrmhOle System</a>
-            <a href="sobre.html">Sobre Nós</a>
-            <a href="produtos.html" class="atual">Produtos</a>
-            <a href="parceiros.html">Parceiros & Investidores</a>
-            <a href="fale.html">Fale Conosco</a>
+            <div>
+                <a href="home.html">Home</a>
+                <a href="sistema.html">MEGG wOrmhOle System</a>
+                <a href="sobre.html">Sobre Nós</a>
+                <a href="produtos.html" class="atual">Produtos</a>
+                <a href="parceiros.html">Parceiros & Investidores</a>
+                <a href="fale.html">Fale Conosco</a>
+            </div>
         </nav>
     </header>
     
