--- a/fale.html
+++ b/fale.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>wOrmhOle/Fale Conosco</title>
+    <title>
+        wOrmhOle/Fale Conosco
+    </title>
     <link rel="shortcut icon" href="imagens/Processamento_1/IMP_Logo B_1.jpg" type="image/x-icon">
     <link rel="stylesheet" href="estilo/style.css" media="screen">
     <link rel="stylesheet" href="estilo/print.css" media="print">
@@ -13,24 +15,50 @@
     <header>
         <menu>
             <img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo">
-            <span id="burger" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
+            <span id="burger" class="material-symbols-outlined" onclick="clickMenu()">
+                menu
+            </span>
         </menu>
         <nav id="itens">
             <img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo">
             <div>
-                <a href="home.html">Home</a>
-                <a href="sistema.html">MEGG wOrmhOle System</a>
-                <a href="sobre.html">Sobre Nós</a>
-                <a href="produtos.html">Produtos</a>
-                <a href="parceiros.html">Parceiros & Investidores</a>
-                <a href="fale.html" class="atual">Fale Conosco</a>
+                <a href="home.html">
+                    Home
+                </a>
+                <a href="sistema.html">
+                    MEGG wOrmhOle System
+                </a>
+                <a href="sobre.html">
+                    Sobre Nós
+                </a>
+                <a href="produtos.html">
+                    Produtos
+                </a>
+                <a href="parceiros.html">
+                    Parceiros & Investidores
+                </a>
+                <a href="fale.html" class="atual">
+                    Fale Conosco
+                </a>
             </div>
         </nav>
     </header>
     
     <main>
-        <p><strong>Email:</strong> contato@sulfibra.com.br</p>
-        <p><strong>Whatsapp:</strong> <s>+55 12 98108 4911</s></p>
+        <p>
+            <strong>
+                Email:
+            </strong>
+             contato@sulfibra.com.br
+            </p>
+        <p>
+            <strong>
+                Whatsapp:
+            </strong>
+             <s>
+                +55 12 98108 4911
+            </s>
+        </p>
     </main>
 
     <script>
