Atualização dos links e adiçao de um novo menu exclusivos para produto.html

--- a/produto_page2.html
+++ b/produto_page2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>wOrmhOle/Parceiros & Investidores</title>
+    <title>wOrmhOle/Produtos</title>
     <link rel="shortcut icon" href="imagens/Processamento_1/IMP_Logo B_1.jpg" type="image/x-icon">
     <link rel="stylesheet" href="estilo/style.css" media="screen">
     <link rel="stylesheet" href="estilo/print.css" media="print">
@@ -15,32 +15,28 @@
             <img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo">
             <span id="burger" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
         </menu>
-        <nav id="itens">
+        <nav id="itens" class="navprincipal">
             <img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo">
             <div>
                 <a href="home.html">Home</a>
                 <a href="sistema.html">MEGG wOrmhOle System</a>
                 <a href="sobre.html">Sobre Nós</a>
-                <a href="produto_page1.html">Produtos</a>
-                <a href="parceiros.html" class="atual">Parceiros & Investidores</a>
+                <span href="produto_page1.html" class="atual">Produtos</span>
+                <a href="parceiros.html">Parceiros & Investidores</a>
                 <a href="fale.html">Fale Conosco</a>
             </div>
+        </nav>
+        <nav class="navproduto">
+            <a href="produto_page1.html" class="atual">Page 1</a>
+            <a href="produto_page2.html" class="atual">Page 2</a>
+            <a href="produto_page3.html" class="atual">Page 3</a>
+            <a href="produto_page4.html" class="atual">Page 4</a>
+            <a href="produto_page5.html" class="atual">Page 5</a>
         </nav>
     </header>
     
     <main>
-        <ul>
-            <li>Vídeo pitch</li>
-            <li>Pitch deck</li>
-            <li>Elevator pitch</li>
-            <li>Tweet pitch</li>
-            <li>One pager</li>
-            <li>Contrato de Parceria</li>
-            <li>Contrato de Franquia</li>
-            <li>Contrato de Investidor</li>
-            <li>Contrato de Licenciamento</li>
-
-        </ul>
+        <h1>Pagina 2</h1>
     </main>
 
     <script>
