--- a/fale.html
+++ b/fale.html
@@ -17,7 +17,7 @@
             <img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo">
             <span id="burger" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
         </menu>
-        <nav id="itens">
+        <nav id="itens" class="navprincipal">
             <img src="imagens/Logo/INPI_Logo_M.jpg" alt="Logo">
             <div>
                 <a href="home.html">Home</a>
