--- a/produto_page3.html
+++ b/produto_page3.html
@@ -21,7 +21,7 @@
                 <a href="home.html">Home</a>
                 <a href="sistema.html">MEGG wOrmhOle System</a>
                 <a href="sobre.html">Sobre Nós</a>
-                <span href="produto_page1.html" class="atual">Produtos</span>
+                <p href="produto_page1.html" class="atual">Produtos</p>
                 <a href="parceiros.html">Parceiros & Investidores</a>
                 <a href="fale.html">Fale Conosco</a>
             </div>
