--- a/produto_page5.html
+++ b/produto_page5.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>wOrmhOle/Produtos</title>
+    <title>wOrmhOle/Produtos/</title>
     <link rel="shortcut icon" href="imagens/Processamento_1/IMP_Logo B_1.jpg" type="image/x-icon">
     <link rel="stylesheet" href="estilo/style.css" media="screen">
     <link rel="stylesheet" href="estilo/print.css" media="print">
@@ -27,11 +27,11 @@
             </div>
         </nav>
         <nav class="navproduto">
-            <a href="produto_page1.html" class="atual">Page 1</a>
-            <a href="produto_page2.html" class="atual">Page 2</a>
-            <a href="produto_page3.html" class="atual">Page 3</a>
-            <a href="produto_page4.html" class="atual">Page 4</a>
-            <a href="produto_page5.html" class="atual">Page 5</a>
+            <a href="produto_page1.html">Page 1</a>
+            <a href="produto_page2.html">Page 2</a>
+            <a href="produto_page3.html">Page 3</a>
+            <a href="produto_page4.html">Page 4</a>
+            <a href="produto_page5.html">Page 5</a>
         </nav>
     </header>
     
