--- a/produto_page5.html
+++ b/produto_page5.html
@@ -59,9 +59,11 @@
         function mudouTamanho(){
             if(window.innerWidth>=769){
                 itens.style.display='flex'
+                nagsec.style.display='flex'
             }
             else{
                 itens.style.display='none'
+                nagsec.style.display='none'
             }
         }
     </script>
