Adicionando display no javascript

--- a/produto_page1.html
+++ b/produto_page1.html
@@ -63,10 +63,12 @@
             if(window.innerWidth>=769){
                 itens.style.display='flex'
                 nagsec.style.display='flex'
+                prod.style.display='block'
             }
             else{
                 itens.style.display='none'
                 nagsec.style.display='none'
+                prod.style.display='none'
             }
         }
     </script>
