--- a/produto_page5.html
+++ b/produto_page5.html
@@ -21,9 +21,9 @@
                 <a href="home.html">Home</a>
                 <a href="sistema.html">MEGG wOrmhOle System</a>
                 <a href="sobre.html">Sobre Nós</a>
-                <p href="produto_page1.html" id="prod" class="atual">Produtos</p>
                 <a href="parceiros.html">Parceiros & Investidores</a>
                 <a href="fale.html">Fale Conosco</a>
+                <p href="produto_page1.html" class="atual">Produtos</p>
             </div>
         </nav>
         <nav id="nagsec" class="navproduto">
@@ -44,14 +44,12 @@
             if(itens.style.display=='block'){
                 itens.style.display='none'
                 nagsec.style.display='none'
-                prod.style.display='none'
                 burger.style.backgroundColor='white'
                 burger.style.color='darkred'
             }
             else{
                 itens.style.display='block'
                 nagsec.style.display='block'
-                prod.style.display='none'
                 burger.style.backgroundColor='darkred'
                 burger.style.color='white'
             }
@@ -60,12 +58,10 @@
             if(window.innerWidth>=769){
                 itens.style.display='flex'
                 nagsec.style.display='flex'
-                prod.style.display='block'
             }
             else{
                 itens.style.display='none'
                 nagsec.style.display='none'
-                prod.style.display='none'
             }
         }
     </script>
