Ajustes do CSS da tabela

--- a/produto_page1.html
+++ b/produto_page1.html
@@ -38,6 +38,10 @@
     <main>
         <h1>Desenhos de Montagem</h1>
         <table>
+            <colgroup>
+                <col class="clink">
+                <col class="cdesc">
+            </colgroup>
             <thead>
                 <th scope="col">Link</th>
                 <th scope="col">Descrição</th>
@@ -54,6 +58,10 @@
                 <tr>
                     <td>Fig.3</td>
                     <td>Amarração em T com blocos Terminais</td>
+                </tr>
+                <tr>
+                    <td>Fig.4</td>
+                    <td>Amarração em X com blocos Genéricos</td>
                 </tr>
             </tbody>
         </table>
