Protótipo inicial da tabela de produtos

--- a/produto_page1.html
+++ b/produto_page1.html
@@ -27,7 +27,7 @@
             </div>
         </nav>
         <nav id="nagsec" class="navproduto">
-            <a href="produto_page1.html" class="atual">Page 1</a>
+            <a href="produto_page1.html" class="atual">Tabela de Produtos</a>
             <a href="produto_page2.html">Page 2</a>
             <a href="produto_page3.html">Page 3</a>
             <a href="produto_page4.html">Page 4</a>
@@ -48,7 +48,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>Fig.1</td>
+                    <td><a href="#">Fig.1</a></td>
                     <td>Amarração da parede com blocos Genéricos</td>
                 </tr>
                 <tr>
@@ -62,6 +62,50 @@
                 <tr>
                     <td>Fig.4</td>
                     <td>Amarração em X com blocos Genéricos</td>
+                </tr>
+                <tr>
+                    <td>Fig.5</td>
+                    <td>Amarração de ombreira de vão Alinhado à parede</td>
+                </tr>
+                <tr>
+                    <td>Fig.6</td>
+                    <td>Amarração de ombreira de vão Transversal à parede</td>
+                </tr>
+                <tr>
+                    <td>Fig.7</td>
+                    <td>Verga para Porta - Típico</td>
+                </tr>
+                <tr>
+                    <td>Fig.8</td>
+                    <td>Verga para Porta - Na Terminação da parede</td>
+                </tr>
+                <tr>
+                    <td>Fig.9</td>
+                    <td>Verga para Janela - Típico</td>
+                </tr>
+                <tr>
+                    <td>Fig.10</td>
+                    <td>Verga para Janela - Na Terminação da parede</td>
+                </tr>
+                <tr>
+                    <td>Fig.11</td>
+                    <td>Contraverga - Típico</td>
+                </tr>
+                <tr>
+                    <td>Fig.12</td>
+                    <td>Contraverga - Na Terminação da parede</td>
+                </tr>
+                <tr>
+                    <td>Fig.13</td>
+                    <td>Montagem do Peitoril - Típico</td>
+                </tr>
+                <tr>
+                    <td>Fig.14</td>
+                    <td>Amarração de canaletas U</td>
+                </tr>
+                <tr>
+                    <td>Fig.15</td>
+                    <td>Amarração de canaletas J</td>
                 </tr>
             </tbody>
         </table>
