Adicionando fotos dos produtos

--- a/produto_page1.html
+++ b/produto_page1.html
@@ -48,7 +48,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td><a href="#">Fig.1</a></td>
+                    <td><a href="imagens/Produtos/Image Figs/01_Amar_G-0.jpg" target="_blank" rel="nofollow">Fig.1</a></td>
                     <td>Amarração da parede com blocos Genéricos</td>
                 </tr>
                 <tr>
