Adicionando links de imagens na tabela

--- a/produto_page1.html
+++ b/produto_page1.html
@@ -52,59 +52,59 @@
                     <td>Amarração da parede com blocos Genéricos</td>
                 </tr>
                 <tr>
-                    <td>Fig.2</td>
+                    <td><a href="imagens/Produtos/Image Figs/02_Amar_L-0.jpg" target="_blank" rel="nofollow">Fig.2</a></td>
                     <td>Amarração em L com blocos Terminais</td>
                 </tr>
                 <tr>
-                    <td>Fig.3</td>
+                    <td><a href="imagens/Produtos/Image Figs/03_Amar_T-0.jpg" target="_blank" rel="nofollow">Fig.3</a></td>
                     <td>Amarração em T com blocos Terminais</td>
                 </tr>
                 <tr>
-                    <td>Fig.4</td>
+                    <td><a href="imagens/Produtos/Image Figs/04_Amar_X-0.jpg" target="_blank" rel="nofollow">Fig.4</a></td>
                     <td>Amarração em X com blocos Genéricos</td>
                 </tr>
                 <tr>
-                    <td>Fig.5</td>
+                    <td><a href="imagens/Produtos/Image Figs/05_Ombreira de vão de Alinhado à parede-0.jpg" target="_blank" rel="nofollow">Fig.5</a></td>
                     <td>Amarração de ombreira de vão Alinhado à parede</td>
                 </tr>
                 <tr>
-                    <td>Fig.6</td>
+                    <td><a href="imagens/Produtos/Image Figs/06_Ombreira de vão Transversal à parede-0.jpg" target="_blank" rel="nofollow">Fig.6</a></td>
                     <td>Amarração de ombreira de vão Transversal à parede</td>
                 </tr>
                 <tr>
-                    <td>Fig.7</td>
+                    <td><a href="imagens/Produtos/Image Figs/07_Verga para Porta - Típico-0.jpg" target="_blank" rel="nofollow">Fig.7</a></td>
                     <td>Verga para Porta - Típico</td>
                 </tr>
                 <tr>
-                    <td>Fig.8</td>
+                    <td><a href="imagens/Produtos/Image Figs/08_Verga para Porta - na Terminação da parede-0.jpg" target="_blank" rel="nofollow">Fig.8</a></td>
                     <td>Verga para Porta - Na Terminação da parede</td>
                 </tr>
                 <tr>
-                    <td>Fig.9</td>
+                    <td><a href="imagens/Produtos/Image Figs/09_Verga para Janela - Típico-0.jpg" target="_blank" rel="nofollow">Fig.9</a></td>
                     <td>Verga para Janela - Típico</td>
                 </tr>
                 <tr>
-                    <td>Fig.10</td>
+                    <td><a href="imagens/Produtos/Image Figs/10_Verga para Janela - na Terminação da parede-0.jpg" target="_blank" rel="nofollow">Fig.10</a></td>
                     <td>Verga para Janela - Na Terminação da parede</td>
                 </tr>
                 <tr>
-                    <td>Fig.11</td>
+                    <td><a href="imagens/Produtos/Image Figs/11_Contraverga - Típico-0.jpg" target="_blank" rel="nofollow">Fig.11</a></td>
                     <td>Contraverga - Típico</td>
                 </tr>
                 <tr>
-                    <td>Fig.12</td>
+                    <td><a href="imagens/Produtos/Image Figs/12_Contraverga - na Terminação da parede-0.jpg" target="_blank" rel="nofollow">Fig.12</a></td>
                     <td>Contraverga - Na Terminação da parede</td>
                 </tr>
                 <tr>
-                    <td>Fig.13</td>
+                    <td><a href="imagens/Produtos/Image Figs/13_Montagem do Peitoril-0.jpg" target="_blank" rel="nofollow">Fig.13</a></td>
                     <td>Montagem do Peitoril - Típico</td>
                 </tr>
                 <tr>
-                    <td>Fig.14</td>
+                    <td><a href="imagens/Produtos/Image Figs/14_Amarração de Canaletas U-0.jpg" target="_blank" rel="nofollow">Fig.14</a></td>
                     <td>Amarração de canaletas U</td>
                 </tr>
                 <tr>
-                    <td>Fig.15</td>
+                    <td><a href="imagens/Produtos/Image Figs/15_Amarração de canaletas J-0.jpg" target="_blank" rel="nofollow">Fig.15</a></td>
                     <td>Amarração de canaletas J</td>
                 </tr>
             </tbody>
