--- a/sistema.html
+++ b/sistema.html
@@ -33,12 +33,12 @@
         <p>O MEGG wOrmhOle System é um sistema que inova o bloco estrutural aparente e a construção modular tradicional introduzindo 5 novos conceitos de construção:</p>
         <ol>
             <li>Construção modular em nível dos menores elementos:<br>
-                <strong>A.</strong> Blocos modulares para paredes;<br>
-                <strong>B.</strong> Blocos modulares para pilares &#40;fora das paredes&#41;;<br>
-                <strong>C.</strong> Blocos modulares para vigas;<br>
-                <strong>D.</strong> Portas modulares;<br>
-                <strong>E.</strong> Janelas modulares;<br>
-                <strong>F.</strong> Quadros modulares e qualquer outro objeto a ser chumbado na parede;
+                <strong>a.</strong> Blocos modulares para paredes;<br>
+                <strong>b.</strong> Blocos modulares para pilares &#40;fora das paredes&#41;;<br>
+                <strong>c.</strong> Blocos modulares para vigas;<br>
+                <strong>d.</strong> Portas modulares;<br>
+                <strong>e.</strong> Janelas modulares;<br>
+                <strong>f.</strong> Quadros modulares e qualquer outro objeto a ser chumbado na parede;
             </li>
             <p><strong>Obs.: </strong>Todos os elementos são manuseáveis.</p>
             <li>Sistema de pré-montagem à seco sem nenhum tipo de encaixe, somente por sobreposição e justaposição, permitindo nivelamento, alinhamento e prumo.</li>
