--- a/produto_page1.html
+++ b/produto_page1.html
@@ -108,6 +108,39 @@
                     <td><a href="imagens/Produtos/Image Figs/15_Amarração de canaletas J-0.jpg" target="_blank" rel="nofollow">Fig.15</a></td>
                     <td>Amarração de canaletas J</td>
                 </tr>
+                <tr>
+                    <td></td>
+                    <td>Viga - Apoio sobre coluna</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>Viga - Terminação em T</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>Viga - Terminação em X</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>Pilar</td>
+                </tr>
+            </tbody>
+        </table>
+        <h1>Tabela 2</h1>
+        <table>
+            <thead>
+                <th>Código</th>
+                <th>Descrição</th>
+                <th>Utilização</th>
+                <th>Desenho</th>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>MEGG-B1-G10</td>
+                    <td>MEGG Bloco G Wormhole de 10 cm [20x20x10] Genérico</td>
+                    <td>Fig. 1, 5b, 7, 9</td>
+                    <td>G10</td>
+                </tr>
             </tbody>
         </table>
     </main>
