Adicionando texto e conteúdo a pagina 1 dos produtos

--- a/produto_page1.html
+++ b/produto_page1.html
@@ -27,12 +27,12 @@
             </div>
         </nav>
         <nav id="nagsec" class="navproduto">
-            <a href="produto_page1.html" class="atual">Tabela de Produtos</a>
-            <a href="produto_page2.html">Page 2</a>
-            <a href="produto_page3.html">Page 3</a>
-            <a href="produto_page4.html">Page 4</a>
-            <a href="produto_page5.html">Page 5</a>
-            <a href="produto_page6.html">Page 6</a>
+            <a href="produto_page1.html" class="atual">Blocos</a>
+            <a href="produto_page2.html">Esquadrilhas</a>
+            <a href="produto_page3.html">Caixas</a>
+            <a href="produto_page4.html">Material Aderente</a>
+            <a href="produto_page5.html">Dispositivos</a>
+            <a href="produto_page6.html">Equipamento</a>
         </nav>
     </header>
     
@@ -126,7 +126,9 @@
                 </tr>
             </tbody>
         </table>
-        <h1>Tabela 2</h1>
+
+
+        <h1>Códigos de Identificação</h1>
         <table>
             <thead>
                 <th>Código</th>
@@ -143,6 +145,79 @@
                 </tr>
             </tbody>
         </table>
+
+
+        <h1>Características Principais</h1>
+        <p>Esta versão inicial dos Blocos wOrmhOle compreende:</p>
+        <ul>
+            <li>Bloco aparente na cor natural;</li>
+            <li>Dimensões modulares reais com tolerâncias dimensionais e geométricas menores do que 1 mm;</li>
+            <li>Pré-montagem sem encaixe, apenas por sobreposição e justaposição;</li>
+            <li>Montagem em lote por injeção de material aderente nas juntas;</li>
+            <li>Família de blocos vazados de largura igual a 20 cm. Vide item: Por que 20 cm?;</li>
+            <li>Garantia de 100 anos.</li>
+        </ul>
+
+
+        <h1>Material</h1>
+        <h3>1: Bloco de concreto:</h3>
+        <ul>
+            <li>Resistência à compressão ≥ 16 MPa;</li>
+            <li>Impermeabilizante incorporado à massa do bloco.</li>
+        </ul>
+
+
+        <h1>Grupos de Esquadrias wOrmhOle</h1>
+        <h3>G: Blocos Genéricos</h3>
+        <ul>
+            <li>São os blocos Genéricos montados nas fiadas genéricas/típicas da parede, exceto nas terminações das fiadas.</li>
+            <li>Os blocos tipo G sempre têm conexão nas duas faces transversais (ex.: G20 ou G40), ou seja, têm duas conexões transversais alinhadas na mesma direção horizontal da parede, podendo ter outras conexões nas faces longitudinais (ex.: G40-D ou G40-X).</li>
+        </ul>
+        <h3>T: Blocos Terminais</h3>
+        <ul>
+            <li>São os blocos Terminais montados apenas nas Terminações das fiadas dos Blocos Genéricos;</li>
+            <li>Os blocos terminais de fiadas específicas, mesmo sendo terminais, não fazem parte deste grupo e portanto, não têm o prefixo T. Estes referidos blocos têm o prefixo do grupo específico (ex.: U20-L, J20-H12L);</li>
+            <li>Os blocos tipo T deste grupo sempre têm uma face transversal exposta, ou seja, é Terminação da parede para mudança de direção, ou em L, ou em T (ex.: T40-D, T40-T). Logicamente que mudança de direção em X (cruz) não possibilita nenhuma face transversal exposta.</li>
+        </ul>
+        <h3>
+            <p><strong>U:</strong> Canaleta U</p>
+        </h3>
+        <ul>
+            <li>São os blocos, na maioria canaletas U, montados nas fiadas específicas, como no caso de vergas e contravergas, cintas de amarração, etc.</li>
+            <li>O peitoril da janela, embora não tenha um perfil de canaleta, pertence a este grupo porque é montado em conjunto com os blocos U da Contraverga.</li>
+        </ul>
+        <h3>J: Canaleta J</h3>
+        <ul>
+            <li>São os blocos, na maioria canaletas J, montados na última fiada das paredes externas, para montagem da laje.</li>
+        </ul>
+        <h3>V: Vigas</h3>
+        <ul>
+            <li>São os blocos, na maioria canaletas U de altura  40 cm e múltipla de 20 cm (ex.: 40, 60...), para montagem de vigas.</li>
+        </ul>
+        <h3>P: Pilares</h3>
+        <p>São os blocos em forma de anéis para montagem de pilares.</p>
+
+
+        <h1>Códigos de Identificação</h1>
+        <p>Estrutura genérica: <strong>MEEG-XY-Z...</strong></p>
+        <p>Onde: </p>
+        <ol>
+            <li>MEGG = Modular Elements Grouted in Group (Elementos Modulares Grauteados em Grupo)</li>
+            <li>X = “B” para Blocos</li>
+            <li>Y = “1” para Blocos de concreto conforme material definido no item 2.</li>
+            <li>Z = “G”, “T”, “B”, “U”, “J”, “V”, “P” conforme grupos de Blocos definidos no item 3.</li>
+        </ol>
+
+
+        <h1>Por que 20 cm?</h1>
+        <ul>
+            <li>Vide o link <a href="https://www.engfaz.com.br/blog/n%C3%A3o-desenhe-paredes-de-15-cm-no-seu-projeto" target="_blank" rel="nofollow">Não desenhe paredes de 15 cm no seu projeto</a></li>
+            <li>Porque paredes de 15 cm, depois de receber chapisco e reboco, têm espessura final de 19 cm;</li>
+            <li>Porque o bloco wOrmhOle não receberá chapisco nem reboco como forma de revestimento;</li>
+            <li>Porque paredes de 15 cm geram dimensões múltiplas de 5 cm, enquanto que a proposta do MEGG wOrmhOle system é utilizar módulo M10 cm;</li>
+            <li>Porque blocos 15x20x40 geram mais necessidade de formatos especiais de blocos nas amarrações L, T, X, etc. do que os blocos de 20x20x40;</li>
+            <li>Porque blocos de 15 não permitem passagem vertical de tubulações de 100 mm (4”);</li>
+        </ul>
     </main>
 
     <script>
