--- a/produto_page4.html
+++ b/produto_page4.html
@@ -27,12 +27,12 @@
             </div>
         </nav>
         <nav id="nagsec" class="navproduto">
-            <a href="produto_page1.html">Tabela de Produtos</a>
-            <a href="produto_page2.html">Page 2</a>
-            <a href="produto_page3.html">Page 3</a>
-            <a href="produto_page4.html" class="atual">Page 4</a>
-            <a href="produto_page5.html">Page 5</a>
-            <a href="produto_page6.html">Page 6</a>
+            <a href="produto_page1.html">Blocos</a>
+            <a href="produto_page2.html">Esquadrilhas</a>
+            <a href="produto_page3.html">Caixas</a>
+            <a href="produto_page4.html" class="atual">Material Aderente</a>
+            <a href="produto_page5.html">Dispositivos</a>
+            <a href="produto_page6.html">Equipamento</a>
         </nav>
     </header>
     
