Atualização no conteúdo de sistemas.html

--- a/sistema.html
+++ b/sistema.html
@@ -38,7 +38,7 @@
                 <strong>c.</strong> Blocos modulares para vigas;<br>
                 <strong>d.</strong> Portas modulares;<br>
                 <strong>e.</strong> Janelas modulares;<br>
-                <strong>f.</strong> Quadros modulares e qualquer outro objeto a ser chumbado na parede;
+                <strong>f.</strong> Caixas modulares.
             </li>
             <p><strong>Obs.: </strong>Todos os elementos são manuseáveis.</p>
             <li>Sistema de pré-montagem à seco sem nenhum tipo de encaixe, somente por sobreposição e justaposição, permitindo nivelamento, alinhamento e prumo.</li>
@@ -57,14 +57,14 @@
             <li>Sistema patenteado de produto;</li>
             <li>Sistema patenteado de processo de montagem;</li>
             <li>Sistema patenteado de processo de fabricação;</li>
-            <li>Design modular M200 &#40;mm&#41;, permitindo a execução de construções de todas dimensões múltiplas de 20 cm;</li>
+            <li>Design modular M10 (cm), permitindo a construção em dimensões múltiplas de 10 cm; dimensões modulares reais, ou seja, sem diminuição de 1 cm nas dimensões nominais; tolerâncias dimensionais e geométricas menores do que 1 mm;</li>
             <li>Design projetado com meios para serem aderidos em grupo;</li>
             <li>Processo de pré-montagem à seco e sem nenhum tipo de encaixe, apenas por sobreposição e justaposição que permite nivelamento, alinhamento e prumo, muito fácil e eficiente;</li>
-            <li>Sistema completo, compreendendo todos os tipos de blocos, portas, janelas, quadros e qualquer outro objeto necessário para a parede de uma edificação;</li>
+            <li>Sistema completo, compreendendo todos os tipos de blocos, portas, janelas, caixas e qualquer outro objeto modular necessário para a parede de uma edificação;</li>
             <li>Processo de aderência em grupo através da injeção de material aderente somente nas juntas de aderência, muito limpo e sem escorrimento de material;</li>
-            <li>Introdução do conceito de blocos com acabamento final direto da fábrica, incluindo impermeabilização, pintura, revestimentos, rodapé, etc.;</li>
+            <li>Introdução do conceito de blocos com acabamento final direto da fábrica, incluindo impermeabilização incorporada à massa do bloco, pintura, revestimentos, rodapé, etc.;</li>
             <li>Material aderente de 40 MPa;</li>
-            <li>Alta durabilidade: Devido ao bloco estrutural ser de resistência maior ou igual a 14 MPa, devido ao impermeabilizante ser incorporado diretamente à massa do bloco, devido à opção de fornecimento e uso na cor natural, devido ao processo industrializado de aplicação de pintura, revestimentos, etc., introduz o conceito de garantia vitalícia da parede vitalícia da parede para determinadas condições;</li>
+            <li>Alta durabilidade: Devido ao bloco estrutural ser de resistência maior ou igual a 14 MPa, devido ao impermeabilizante ser incorporado diretamente à massa do bloco, devido à opção de fornecimento e uso na cor natural, devido ao processo industrializado de aplicação de pintura, revestimentos, etc., introduz o conceito de garantia de 100 anos (ainda necessita de investimento em testes comprobatórios);</li>
             <li>Todos os módulos são manuseáveis;</li>
             <li>Resolve a necessidade de acesso, espaço e máquinas pesadas para movimentação dos módulos tradicionais;</li>
             <li>Resolve as limitações de design e dimensões para fabricação em série dos módulos tradicionais;</li>
