Conteúdo pagina Produtos 2

--- a/produto_page1.html
+++ b/produto_page1.html
@@ -131,10 +131,10 @@
         <h1>Códigos de Identificação</h1>
         <table>
             <thead>
-                <th>Código</th>
-                <th>Descrição</th>
-                <th>Utilização</th>
-                <th>Desenho</th>
+                <th scope="col">Código</th>
+                <th scope="col">Descrição</th>
+                <th scope="col">Utilização</th>
+                <th scope="col">Desenho</th>
             </thead>
             <tbody>
                 <tr>
@@ -202,8 +202,8 @@
         <p>Estrutura genérica: <strong>MEEG-XY-Z...</strong></p>
         <p>Onde: </p>
         <ol>
-            <li>MEGG = Modular Elements Grouted in Group (Elementos Modulares Grauteados em Grupo)</li>
-            <li>X = “B” para Blocos</li>
+            <li>MEGG = Modular Elements Grouted in Group (Elementos Modulares Grauteados em Grupo).</li>
+            <li>X = “B” para Blocos.</li>
             <li>Y = “1” para Blocos de concreto conforme material definido no item 2.</li>
             <li>Z = “G”, “T”, “B”, “U”, “J”, “V”, “P” conforme grupos de Blocos definidos no item 3.</li>
         </ol>
@@ -211,7 +211,7 @@
 
         <h1>Por que 20 cm?</h1>
         <ul>
-            <li>Vide o link <a href="https://www.engfaz.com.br/blog/n%C3%A3o-desenhe-paredes-de-15-cm-no-seu-projeto" target="_blank" rel="nofollow">Não desenhe paredes de 15 cm no seu projeto</a></li>
+            <li>Vide o link: <a href="https://www.engfaz.com.br/blog/n%C3%A3o-desenhe-paredes-de-15-cm-no-seu-projeto" target="_blank" rel="nofollow">Não desenhe paredes de 15 cm no seu projeto</a></li>
             <li>Porque paredes de 15 cm, depois de receber chapisco e reboco, têm espessura final de 19 cm;</li>
             <li>Porque o bloco wOrmhOle não receberá chapisco nem reboco como forma de revestimento;</li>
             <li>Porque paredes de 15 cm geram dimensões múltiplas de 5 cm, enquanto que a proposta do MEGG wOrmhOle system é utilizar módulo M10 cm;</li>
