--- a/sistema.html
+++ b/sistema.html
@@ -33,12 +33,12 @@
         <p>O MEGG wOrmhOle System é um sistema que inova o bloco estrutural aparente e a construção modular tradicional introduzindo 5 novos conceitos de construção:</p>
         <ol>
             <li>Construção modular em nível dos menores elementos:<br>
-                <strong>a.</strong> Blocos modulares para paredes;<br>
-                <strong>b.</strong> Blocos modulares para pilares &#40;fora das paredes&#41;;<br>
-                <strong>c.</strong> Blocos modulares para vigas;<br>
-                <strong>d.</strong> Portas modulares;<br>
-                <strong>e.</strong> Janelas modulares;<br>
-                <strong>f.</strong> Caixas modulares.
+                <strong>1. a.</strong> Blocos modulares para paredes;<br>
+                <strong>1. b.</strong> Blocos modulares para pilares &#40;fora das paredes&#41;;<br>
+                <strong>1. c.</strong> Blocos modulares para vigas;<br>
+                <strong>1. d.</strong> Portas modulares;<br>
+                <strong>1. e.</strong> Janelas modulares;<br>
+                <strong>1. f.</strong> Caixas modulares.
             </li>
             <p><strong>Obs.: </strong>Todos os elementos são manuseáveis.</p>
             <li>Sistema de pré-montagem à seco sem nenhum tipo de encaixe, somente por sobreposição e justaposição, permitindo nivelamento, alinhamento e prumo.</li>
