--- a/produto_page2.html
+++ b/produto_page2.html
@@ -37,7 +37,55 @@
     </header>
     
     <main>
-        <h1>Pagina 2</h1>
+        <h1>Códigos de Identificação</h1>
+        <table>
+            <thead>
+                <th scope="col">A</th>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>A</td>
+                </tr>
+            </tbody>
+        </table>
+
+
+        <h1>Características Principais</h1>
+        <p>Esta versão incial das Esquadrias wOrmhOle compreende:</p>
+        <ul>
+            <li>Esquadria com acabamento final de fábrica;</li>
+            <li>Dimensões modulares reais com tolerâncias dimensionais e geométricas menores do que 1 mm;</li>
+            <li>Pré-montagem sem encaixe, apenas por sobreposição e justaposição;</li>
+            <li>Chumbamento em lote junto com os blocos, por injeção de material aderente;</li>
+        </ul>
+
+
+        <h1>Materiais</h1>
+        <ol>
+            <li>Esquadria de Alumínio;</li>
+            <li>Esquadria de Madeira;</li>
+            <li>Esquadria de Vidro;</li>
+            <li>Esquadria de PVC e outros compósitos;</li>
+            <li>Esquadria de Aço carbono;</li>
+            <li>Esquadria de Aço inox;</li>
+            <li>Esquadria de Ferro forjado.</li>
+        </ol>
+
+
+        <h1>Grupos de Esquadrias wOrmhOle</h1>
+        <h3>P: Portas</h3>
+        <h3>J: Janelas</h3>
+
+
+        <h1>Códigos de Identificação</h1>
+        <p>Estrutura genérica:<strong> MEEG-XY-Z...</strong></p>
+        <p>Onde:</p>
+        <ol>
+            <li>MEGG = Modular Elements Grouted in Group (Elementos Modulares Grauteados em Grupo).</li>
+            <li>X = “E” para Esquadrias.</li>
+            <li>Y = “1... 7” para Esquadrias conforme material definido no item 2.</li>
+            <li>Z = “P”, “J” conforme grupos de Esquadrias definidas no item 3.</li>
+        </ol>
     </main>
 
     <script>
